:lipstick: Fix contrast ratio issues

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -24,7 +24,7 @@ Underscores is distributed under the terms of the GNU GPL v2 or later.
 $family-sans-serif: "Roboto", "Arial", sans-serif;
 
 $primary: #8BC443;
-$link: #0098C0;
+$link: #006D87;
 $grey: #A7AE9C;
 $grey-darker: #43493A;
 $info: #00CFFF;
